# Thanksgiving-Hack

./: .gitignore  README.md
RayTracing/: Camra.h  Hittable.cpp  Material.h  color.hpp  config.json  readConfig.h  rtweekend.h
examples/cpp/helloworld/: CMakeLists.txt  GreeterClient.hpp
examples/cpp/helloworld/RayTracing/: color.hpp
grpc-src/cpp/helloworld/: CMakeLists.txt  GreeterClient.hpp  Worker.hpp  client.cc  server.cc
grpc-src/cpp/helloworld/RayTracing/: main.cpp  vec3.hpp
grpc-src/protos/: src.proto
grpc/examples/cpp/helloworld/: GreeterClient.hpp  Worker.hpp  command_client.cc  config.json  greeter_client.cc  greeter_server.cc
grpc/examples/cpp/helloworld/RayTracing/: Camra.h  Hittable.hpp  HittableList.hpp  Ray.hpp  RayTracer.hpp  Sphere.hpp
grpc/examples/protos/: helloworld.proto
